Renaming of HTML ids and css to stop contacts interface being green when contact form visible

--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,15 @@ div {
   margin: 1em;
 }
 
-div#buttons {
+div#contacts-buttons {
   background-color: rgb(165, 221, 221);
   padding: 1em;
   width: 30%;
+}
+
+#contacts-buttons:empty {
+  background: transparent;
+  padding: 0;
 }
 
 h1 {
